use URL instead of URI and fix spelling